fix: add missing border to non-notification alerts

--- a/wa.user.styl
+++ b/wa.user.styl
@@ -1416,7 +1416,7 @@ OM = _omsg
                     if (app_alerts == 'hide') {
                         > div { display: none i }
                     } else if (app_alerts == 'notifications') {
-                        border-bottom: 1px solid bg5 i
+                        > div { border-bottom: 1px solid bg5 i }
                         > div._1oIRX { display: none i }
                     } else {
                         border-bottom: 1px solid bg5 i
